--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@codemirror/language": "^6.11.3",
     "@codemirror/language-data": "^6.5.2",
     "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.4",
     "@lezer/highlight": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.4",
