--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/query-async-storage-persister": "^5.90.14",
     "@tanstack/query-persist-client-core": "^5.91.11",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
