--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@codemirror/view": "^6.39.4",
     "@hookform/resolvers": "^5.2.2",
     "@lezer/highlight": "^1.2.3",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
