--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
