--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "idb-keyval": "^6.2.2",
     "immer": "^11.1.0",
     "lucide-react": "^0.562.0",
